# bot-or-not

./: .gitignore  README.md  analysis.test.ts  analysis.ts  detector.ts  index.tsx  instructions.txt  llm-cache.ts  llm.ts  main.py  models.ts  package.json  pyproject.toml  stats.ipynb  tools.ts
detectors/: baseline.ts  batching.ts  cache.test.ts  cache.ts  inv_recursive.ts  politics-ragebait-grammar-batched.ts  politics-ragebait-grammar.ts  recursive-v2.ts  recursive.ts  stats-based.ts  v2.ts  v3.ts  v4.ts
final_results/: maxilillian.detections.en-2.txt  maxilillian.detections.en.txt  maxilillian.detections.fr.txt
js/: analysis.test.ts  analysis.ts  data.ts  index.tsx  llm.ts  models.ts  package.json  paths.ts  tools.ts
python/: README.md  fine-tune.ipynb  main.py  pyproject.toml  stats.ipynb
python/fine_tuning/: README.md  __init__.py  cli.py  constants.py  data.py  metrics.py  openai_api.py
results/: baseline-30-2026-02-08T19-30-22-221Z.results.txt  baseline-30-2026-02-08T19-38-31-329Z.results.txt  baseline-30-2026-02-08T20-01-28-613Z.results.txt  baseline-30-2026-02-08T21-57-05-763Z.results.txt  baseline-30-2026-02-08T21-59-37-441Z.results.txt  baseline-30_32-2026-02-08T20-51-06-002Z.results.txt  baseline-31-2026-02-08T19-59-30-672Z.results.txt  batching-30-2026-02-08T20-20-50-384Z.results.txt  batching-30_32-2026-02-08T20-55-13-618Z.results.txt  final-en-34-2026-02-14T17-14-48-890Z.results.txt  final-en-34-2026-02-14T17-46-47-602Z.results.txt  final-fr-35-2026-02-14T17-16-46-969Z.results.txt  final-fr-35-2026-02-14T17-47-06-824Z.results.txt  (+43 more)
(+68 files in other folders)
