[project]
name = "bot-or-not"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "openai>=1.68.2",
    "pydantic>=2.11.0",
    "tqdm>=4.67.1",
]

[project.scripts]
fine-tuning = "fine_tuning.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fine_tuning"]

[tool.uv]
package = true
